# Aurilius

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Aurilius.h  Aurilius.sln  CMakeCache.txt  CMakeLists.txt  Matrix-Library.sln  Matrix.cpp  Matrix.h  Matrix_impl.hpp  Numerical_integration.hpp  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  pin.vcxproj  pin.vcxproj.filters
Debug/: Matrix-Library.ilk
Matrix-Library/: Matrix-Library.vcxproj  Matrix-Library.vcxproj.filters  Matrix.h  Matrix_impl.hpp  main.cpp
Matrix-Library/Debug/: vc142.idb
Matrix-Library/Debug/Matrix-Library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Matrix-Library.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Activations.cpp  Activations.h  Aurilius.h  Matrix.h  Matrix_impl.hpp  Numerical_integration.hpp  Perceptron.cpp  Perceptron.h  main.cpp
src/MachineLearning/: Activations.cpp  Activations.h  LogisticRegression.cpp  LogisticRegression.h  Loss.cpp  Loss.h  MachineLearning.h  Perceptron.cpp  Perceptron.h
src/MachineLearning/NeuralNetwork/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
src/Matrix/: Matrix.h  Matrix_impl.hpp
src/NumericalIntegration/: Numerical_integration.hpp
src/Vector/: Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h
